# src/index.ts
@@ -5,6 +5,7 @@ import swaggerDocument from './docs/swagger-output.json' with { type: 'json' };
 import { getDb } from './db/index.ts';
 import { stallRouter } from './routes/stallRouter.ts';
 import { userRouter } from './routes/userRouter.ts';
+import { menuItemRouter } from './routes/menuItemRouter.ts';
 
 const app: Application = express();
 const PORT: number = 3000;
@@ -30,6 +31,7 @@ app.get('/health', async (req: Request, res: Response) => {
 
 app.use('/api/v1/stalls', stallRouter);
 app.use('/api/v1/users', userRouter);
+app.use('/api/v1/menu-items', menuItemRouter);
 
 app.listen(PORT, () => {
   console.log(`Server berjalan di http://localhost:${PORT}`);
